--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -556,3 +556,18 @@ a.pagination-item:hover {
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
 }
+
+/* Video
+ */
+
+.iframeVideo {
+	height: 0px;
+	padding-top: 25px;
+	padding-bottom: 56.2%;
+	position: relative;
+}
+.iframeVideo iframe {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
