--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -563,7 +563,7 @@ a.pagination-item:hover {
 .iframeVideo {
 	height: 0px;
 	padding-top: 25px;
-	padding-bottom: 56.2%;
+	padding-bottom: 25px;
 	position: relative;
 }
 .iframeVideo iframe {
