--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -566,7 +566,7 @@ a.pagination-item:hover {
 	position: relative;
 	display: block;
 	max-width: 100%;
-	margin: 0 0 15rem 15rem;
+	margin: 0 0 2rem;
 	border-radius: 5px;
 }
 .iframeVideo iframe {
